Add ThemeUtil.java and UI util package